<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_movie_directors_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/directors_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_directors"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey4"></View>

        <TextView
            android:id="@+id/directors_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="21sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>